syntax = "proto3";

package notification;

option go_package = "./pb";

message GetNotificationsRequest {}

message GetNotificationRequest {
  int32 id = 1;
}

message Notification {
  int32 id = 1;
  string task_title = 2;
  int32 type_message = 3;
  string message = 4;
  string date = 5;
}

message NotificationList {
  repeated Notification notifications = 1;
}

service NotificationService {
    rpc GetNotifications(GetNotificationsRequest) returns (NotificationList);
    rpc GetNotification(GetNotificationRequest) returns (Notification);
    rpc CreateNotification(CreateNotificationRequest) returns (Notification);
    rpc UpdateNotification(UpdateNotificationRequest) returns (Notification);
    rpc DeleteNotification(DeleteNotificationRequest) returns (DeleteNotificationResponse);
}

message CreateNotificationRequest {
  Notification notification = 1;
}

message UpdateNotificationRequest {
  int32 id = 1;
  Notification notification = 2;
}

message DeleteNotificationRequest {
  int32 id = 1;
}

message DeleteNotificationResponse {
  bool success = 1;
}
